# pocket-tts

./: AGENTS.md  README.md  pyproject.toml
docs/: pocket-tts-example.ipynb  quantization.md
docs/API Reference/: python-api.md
pocket_tts/: main.py
pocket_tts/config/: french.yaml  german.yaml  italian.yaml  portuguese.yaml
pocket_tts/data/: audio.py
pocket_tts/models/: flow_lm.py  tts_model.py
pocket_tts/modules/: layer_scale.py  mimi_transformer.py
pocket_tts/utils/: utils.py  weights_loading.py
tests/: test_cli_generate.py  test_documentation_examples.py
