[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pocket-tts"
version = "0.1.0"
description = "A lightweight text-to-speech library — fork of kyutai-labs/moshi"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "pocket-tts contributors" },
]
keywords = ["tts", "text-to-speech", "speech-synthesis", "audio", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.20.0",
    "sentencepiece>=0.1.99",
    "safetensors>=0.4.0",
    "soundfile>=0.12.1",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
pocket-tts = "pocket_tts.cli:main"

[project.urls]
Homepage = "https://github.com/pocket-tts/pocket-tts"
Repository = "https://github.com/pocket-tts/pocket-tts"
Issues = "https://github.com/pocket-tts/pocket-tts/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pocket_tts"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pocket_tts"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pocket_tts --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/pocket_tts"]
omit = ["*/tests/*"]
